--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
       <div class="flex flex-wrap -m-4">
         <div class="p-4 lg:w-1/2">
           <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="tarun.jpg">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="tarun.png">
             <div class="flex-grow sm:pl-8">
               <h2 class="title-font font-medium text-lg text-white">Tarun Gupta</h2>
               <h3 class="text-gray-500 mb-3">E21CSEU0771</h3>
-              <a href="https://linktr.ee/Tarun2003" target="_blank" rel="noopener noreferrer"><button  class="mb-4" style="border: 1px solid; padding: 5px 10px;">Links</button></a>
+              <a href="https://linktr.ee/MaybeTarun" target="_blank" rel="noopener noreferrer"><button  class="mb-4" style="border: 1px solid; padding: 5px 10px;">Links</button></a>
               <span class="inline-flex">
                 <a class="text-gray-500">
                 </a>
